# gym-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/gym-studio/: CMakeLists.txt
apps/gym-studio/src/: main.cpp
docs/: concept-coverage.yaml  concept-map.md  concepts.md  context.md  experiment-registry.yaml  first-experiments.md  initial-codex-prompt.md  ontology.md  project-guide.md  roadmap.md
docs/learning-resources/: reading.md  tubes.md
engine/: CMakeLists.txt
engine/core/: app_shell.cpp  app_shell.hpp  experiment.cpp  experiment.hpp  experiment_launcher.cpp  experiment_launcher.hpp
engine/math/: color.hpp  vector2.cpp  vector2.hpp
engine/rendering/: debug_renderer.cpp  debug_renderer.hpp  renderer.cpp  renderer.hpp  svg_renderer.cpp  svg_renderer.hpp
experiments/: CMakeLists.txt  registry.cpp  registry.hpp
experiments/bezier_lab/: basic-lines.glsl  bezier_lab.cpp  bezier_lab.hpp
experiments/noise_terrain/: noise_terrain.cpp  noise_terrain.hpp
experiments/parametric_curves/: parametric_curves.cpp  parametric_curves.hpp
experiments/scalar_fields/: scalar_fields.cpp  scalar_fields.hpp
experiments/transform_rosettes/: transform_rosettes.cpp  transform_rosettes.hpp
gyms/: ai-learning.md  algorithms-geometry.md  emergence.md  prueitt-math.md  simulation.md
labs/: bezier-lab.md  diffusion-lab.md  flocking-lab.md  monte-carlo-lab.md  optimization-lab.md  parametric-curves-lab.md  pathfinding-lab.md  procedural-growth-lab.md  reaction-diffusion-lab.md  scalar-field-lab.md  terrain-lab.md  transformation-lab.md
